[gd_scene load_steps=23 format=2]

[ext_resource path="res://levels/solid/srp/SRPLevel.gd" type="Script" id=1]
[ext_resource path="res://levels/solid/srp/info.tres" type="Resource" id=2]
[ext_resource path="res://entities/level/PlayerSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/solid/srp/lightmap/lightmap.lmbake" type="BakedLightmapData" id=5]
[ext_resource path="res://entities/doors/DoorSingle.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/screen/WideScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/screen/ScreenSquare.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/doors/Lights.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/Item.gd" type="Script" id=12]
[ext_resource path="res://entities/slider/Slider.tscn" type="PackedScene" id=13]
[ext_resource path="res://levels/solid/srp/slides/Slide1.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/Hint/Hint.tscn" type="PackedScene" id=15]
[ext_resource path="res://levels/solid/srp/slides/Slide.tscn" type="PackedScene" id=16]

[sub_resource type="GDScript" id=5]
script/source = "extends Code


var screens = [
	getObject(\"Screen1\"),
	getObject(\"Screen2\"),
	getObject(\"Screen3\")
]


# Take a string expression and return string result
func executeExpression(expression: String) -> String:
	var e = Expression.new()
	e.parse(expression)
	return str(e.execute())


# Enters the password' digits on the right screens
func enterPassword(password: String):
	if password.length() != 3:
		password = \"%03d\" % int(password)
	for i in 3:
		screens[i].setValue(password[i])
"

[sub_resource type="GDScript" id=6]
script/source = "extends Code


# Implement this class
"

[sub_resource type="GDScript" id=1]
script/source = "extends Screen


# Called when the screen value changed
func onValueChanged(expression):
	var calculator = getObject(\"Calculator\")
	var passwordSetter = getObject(\"PasswordSetter\") 

	if calculator.has_method(\"executeExpression\"):
		var password = calculator.executeExpression(expression)
		if passwordSetter.has_method(\"enterPassword\"):
			passwordSetter.enterPassword(password)

"

[sub_resource type="GDScript" id=2]
script/source = "extends Screen

"

[sub_resource type="GDScript" id=3]
script/source = "extends Screen

"

[sub_resource type="GDScript" id=4]
script/source = "extends Screen

"

[node name="SRPLevel" type="Spatial"]
script = ExtResource( 1 )
level_info = ExtResource( 2 )
slider = NodePath("Slider")
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")
hints = NodePath("Hints")

[node name="Slider" parent="." instance=ExtResource( 13 )]
slide_scenes = [ ExtResource( 14 ) ]

[node name="Map" parent="." instance=ExtResource( 4 )]
data = {
"cells": PoolIntArray( 1, 0, -1609170937, 65533, 0, -1609564153, 0, 1, -1609957374, 65534, 1, -1609564158, 262144, 1, -1610481639, 327678, 1, -1610481639, 1, 2, -1609957343, 65533, 2, -1609957343, 65535, 2, -1609957339, 65535, 3, -1609957334, 1, 65492, -1609957346, 3, 65492, -1610612727, 5, 65492, -1610612704, 7, 65492, -1610612727, 9, 65492, -1609170911, 2, 65493, -1610612734, 4, 65493, -1609170939, 6, 65493, -1609170941, 8, 65493, -1609170942, 262146, 65493, -1610481639, 262148, 65493, -1610481639, 262150, 65493, -1610481639, 262152, 65493, -1610481639, 1, 65494, -1609564153, 9, 65494, -1609170907, 2, 65495, -1610612731, 4, 65495, -1609957370, 8, 65495, -1609957374, 262146, 65495, -1610481639, 262148, 65495, -1610481639, 262150, 65495, -1610481639, 262152, 65495, -1610481639, 1, 65496, -1609564128, 5, 65496, -1609957346, 7, 65496, -1609957369, 9, 65496, -1609170911, 2, 65497, -1610612733, 262146, 65497, -1610481639, 262148, 65497, -1610481639, 1, 65498, -1609564153, 5, 65498, -1609170937, 2, 65499, -1609564158, 4, 65499, -1609957374, 262146, 65499, -1610481639, 262148, 65499, -1610481639, 1, 65500, -1609957343, 3, 65500, -1609957341, 5, 65500, -1609957343, 1, 65501, -1609957343, 3, 65501, -1610612702, 5, 65501, -1609957343, 7, 65501, -1610612724, 9, 65501, -1609957345, 65533, 65501, -1609957345, 65535, 65501, -1610612724, 0, 65502, -1609170939, 2, 65502, -1609170939, 4, 65502, -1609170939, 6, 65502, -1609170939, 8, 65502, -1609170942, 65534, 65502, -1610612734, 262144, 65502, -1610481639, 262146, 65502, -1610481639, 262148, 65502, -1610481639, 262150, 65502, -1610481639, 262152, 65502, -1610481639, 327678, 65502, -1610481639, 9, 65503, -1609170934, 65533, 65503, -1609564150, 0, 65504, -1609170944, 2, 65504, -1609170944, 4, 65504, -1609170944, 6, 65504, -1609170944, 8, 65504, -1609957371, 65534, 65504, -1610612731, 262144, 65504, -1610481639, 262146, 65504, -1610481639, 262148, 65504, -1610481639, 262150, 65504, -1610481639, 262152, 65504, -1610481639, 327678, 65504, -1610481639, 9, 65505, -1609170912, 65533, 65505, -1609564128, 0, 65506, -1609170944, 2, 65506, -1609170944, 4, 65506, -1609170944, 6, 65506, -1609170944, 8, 65506, -1609957371, 65534, 65506, -1610612731, 262144, 65506, -1610481639, 262146, 65506, -1610481639, 262148, 65506, -1610481639, 262150, 65506, -1610481639, 262152, 65506, -1610481639, 327678, 65506, -1610481639, 9, 65507, -1609170934, 65533, 65507, -1609564150, 0, 65508, -1609170944, 2, 65508, -1609170940, 4, 65508, -1609170940, 6, 65508, -1609170944, 8, 65508, -1609957371, 65534, 65508, -1610612731, 262144, 65508, -1610481639, 262146, 65508, -1610481641, 262148, 65508, -1610481640, 262150, 65508, -1610481639, 262152, 65508, -1610481639, 327678, 65508, -1610481639, 9, 65509, -1609170912, 65533, 65509, -1609564128, 0, 65510, -1609170944, 2, 65510, -1609170940, 4, 65510, -1609170940, 6, 65510, -1609170944, 8, 65510, -1609957371, 65534, 65510, -1610612731, 262144, 65510, -1610481639, 262146, 65510, -1610481640, 262148, 65510, -1610481641, 262150, 65510, -1610481639, 262152, 65510, -1610481639, 327678, 65510, -1610481639, 9, 65511, -1609170934, 65533, 65511, -1609564150, 0, 65512, -1609170944, 2, 65512, -1609170944, 4, 65512, -1609170944, 6, 65512, -1609170944, 8, 65512, -1609957371, 65534, 65512, -1610612731, 262144, 65512, -1610481639, 262146, 65512, -1610481639, 262148, 65512, -1610481639, 262150, 65512, -1610481639, 262152, 65512, -1610481639, 327678, 65512, -1610481639, 9, 65513, -1609170912, 65533, 65513, -1609564128, 0, 65514, -1609170944, 2, 65514, -1609170944, 4, 65514, -1609170944, 6, 65514, -1609170944, 8, 65514, -1609957371, 65534, 65514, -1610612731, 262144, 65514, -1610481639, 262146, 65514, -1610481639, 262148, 65514, -1610481639, 262150, 65514, -1610481639, 262152, 65514, -1610481639, 327678, 65514, -1610481639, 9, 65515, -1609170934, 65533, 65515, -1609564150, 0, 65516, -1609564155, 2, 65516, -1609564155, 4, 65516, -1609564155, 6, 65516, -1609564155, 8, 65516, -1609957374, 65534, 65516, -1609564158, 262144, 65516, -1610481639, 262146, 65516, -1610481639, 262148, 65516, -1610481639, 262150, 65516, -1610481639, 262152, 65516, -1610481639, 327678, 65516, -1610481639, 1, 65517, -1609170911, 3, 65517, -1609957341, 5, 65517, -1609170911, 7, 65517, -1609957369, 9, 65517, -1609957345, 65533, 65517, -1609957345, 65535, 65517, -1609957369, 1, 65518, -1609957343, 3, 65518, -1610612702, 5, 65518, -1609957343, 2, 65519, -1610612734, 4, 65519, -1609170942, 262146, 65519, -1610481639, 262148, 65519, -1610481639, 1, 65520, -1609564153, 5, 65520, -1609170937, 4, 65521, -1609957373, 262146, 65521, -1610481639, 262148, 65521, -1610481639, 1, 65522, -1609957346, 5, 65522, -1609170912, 65533, 65522, -1609957346, 65535, 65522, -1610612729, 0, 65523, -1609170939, 2, 65523, -1610612730, 4, 65523, -1609957371, 65534, 65523, -1610612734, 262144, 65523, -1610481639, 262146, 65523, -1610481639, 262148, 65523, -1610481639, 327678, 65523, -1610481639, 5, 65524, -1609170937, 65533, 65524, -1609564153, 0, 65525, -1609957370, 2, 65525, -1609564155, 4, 65525, -1609957374, 65534, 65525, -1610612731, 262144, 65525, -1610481639, 262146, 65525, -1610481639, 262148, 65525, -1610481639, 327678, 65525, -1610481639, 1, 65526, -1609957346, 3, 65526, -1609957369, 5, 65526, -1609957346, 65533, 65526, -1609564128, 0, 65527, -1609957373, 262144, 65527, -1610481639, 327678, 65527, -1610481639, 1, 65528, -1609170937, 65533, 65528, -1609564153, 65534, 65529, -1610612733, 262144, 65529, -1610481639, 327678, 65529, -1610481639, 1, 65530, -1609957346, 3, 65530, -1610612729, 5, 65530, -1609957346, 65529, 65530, -1609957346, 65531, 65530, -1610612729, 65533, 65530, -1609957346, 0, 65531, -1609170938, 2, 65531, -1609170941, 4, 65531, -1609170942, 65530, 65531, -1610612734, 65532, 65531, -1609170941, 65534, 65531, -1610612730, 262144, 65531, -1610481639, 262146, 65531, -1610481639, 262148, 65531, -1610481639, 327674, 65531, -1610481639, 327676, 65531, -1610481639, 327678, 65531, -1610481639, 5, 65532, -1609170936, 65529, 65532, -1609564153, 65530, 65532, -1609170904, 0, 65533, -1609957370, 4, 65533, -1609957374, 65530, 65533, -1609564158, 65534, 65533, -1609564154, 262144, 65533, -1610481639, 262146, 65533, -1610481639, 262148, 65533, -1610481639, 327674, 65533, -1610481639, 327676, 65533, -1610481639, 327678, 65533, -1610481639, 1, 65534, -1609957346, 3, 65534, -1609957369, 5, 65534, -1609957346, 65529, 65534, -1609957346, 65531, 65534, -1609957369, 65533, 65534, -1609957346, 0, 65535, -1609957373, 262144, 65535, -1610481639, 327678, 65535, -1610481639 )
}

[node name="PlayerSpawner" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2, 1.5 )

[node name="Lights" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2.5, -3.5 )
omni_range = 10.0

[node name="OmniLight2" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 2.5, -11.5 )
omni_range = 10.0

[node name="OmniLight3" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 2.5, -26.5 )
omni_range = 20.0

[node name="OmniLight4" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 2.5, -41.5 )
omni_range = 10.0

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 2.5, -21 )
extents = Vector3( 11, 4, 24.5 )
quality = 0
use_hdr = false
use_color = false
capture_quality = 0
light_data = ExtResource( 5 )

[node name="Item" type="Spatial" parent="."]

[node name="Calculator" type="StaticBody" parent="Item"]
script = ExtResource( 12 )
code = SubResource( 5 )
display_name = "Calculator"
description = "Calculator class"
is_programmable = true

[node name="PasswordSetter" type="StaticBody" parent="Item"]
script = ExtResource( 12 )
code = SubResource( 6 )
display_name = "PasswordSetter"
description = "Enters the password digits on the screens"
is_programmable = true

[node name="Computer" parent="Item" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4365, 0.5, -26.43 )
display_name = "Computer"
is_interactable = true
interaction_message = "to use"

[node name="Door" parent="Item" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.5, -34.5 )
display_name = "Door"
description = "Put the result of the expression in the screen above"
lights_path = NodePath("../Lights")

[node name="DoorSingle" parent="Item" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0.5, -41.5 )
display_name = "Exit Door"
description = "Open to exit"
is_interactable = true
interaction_message = "to open"

[node name="Screen" parent="Item" instance=ExtResource( 7 )]
transform = Transform( 1.2, 0, 0, 0, 0.6, -1.03923, 0, 1.03923, 0.6, 3.5, 4.15612, -34.4763 )
code = SubResource( 1 )
display_name = "ExpressionScreen"
description = "Shows an expression to calculate"
is_programmable = true
locked = true
connect_on_value_changed = true

[node name="Pass1" parent="Item" instance=ExtResource( 10 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 2.98153, 3.72004, -34.6574 )
code = SubResource( 2 )
display_name = "Screen1"
description = "Put the third digit"
is_programmable = true
locked = true
value = "0"
can_set_value = true

[node name="Pass2" parent="Item" instance=ExtResource( 10 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 3.4964, 3.72004, -34.6574 )
code = SubResource( 3 )
display_name = "Screen2"
description = "Put the second digit"
is_programmable = true
locked = true
value = "0"
can_set_value = true

[node name="Pass3" parent="Item" instance=ExtResource( 10 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 4.00478, 3.72004, -34.6574 )
code = SubResource( 4 )
display_name = "Screen3"
description = "Put the first digit"
is_programmable = true
locked = true
value = "0"
can_set_value = true

[node name="Lights" parent="Item" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4.58158, 3.73336, -34.7331 )
display_name = "Lights"
description = "Door light"
lights = 1

[node name="ExpressionChanger" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="PasswordChecker" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hints" parent="." instance=ExtResource( 15 )]
slide_scenes = [ ExtResource( 14 ), ExtResource( 16 ) ]

[connection signal="opened" from="Item/Door" to="." method="_on_Door_opened"]
[connection signal="interact" from="Item/DoorSingle" to="." method="_on_DoorSingle_interact"]
[connection signal="timeout" from="ExpressionChanger" to="." method="_on_ExpressionChanger_timeout"]
[connection signal="timeout" from="PasswordChecker" to="." method="_on_PasswordChecker_timeout"]
